项目初始化结束

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "supermall",
+  "name": "mall",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -18,5 +18,17 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ]
+  ],
+  "description": "## Project setup ``` npm install ```",
+  "main": "babel.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Sirros/MAll.git"
+  },
+  "author": "Sirros",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Sirros/MAll/issues"
+  },
+  "homepage": "https://github.com/Sirros/MAll#readme"
 }
