--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "axios": "^0.19.2",
     "better-scroll": "^1.15.2",
     "core-js": "^3.4.4",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
+    "swiper": "^5.3.1",
     "vue": "^2.6.10",
+    "vue-awesome-swiper": "^2.6.7",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
