--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "swiper": "^5.3.1",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^2.6.7",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
