--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "swiper": "^5.3.1",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^2.6.7",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
